--- a/Jupyter/2019.2.Prova_AV2_Gestão_do_Conhecimento.ipynb
+++ b/Jupyter/2019.2.Prova_AV2_Gestão_do_Conhecimento.ipynb
@@ -70,14 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "lT8fVn5TCxV8"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#https://drive.google.com/open?id=1q2ylXG770HuJBcisVXqRtFDqq_j-gaK8"
+   ]
   },
   {
    "cell_type": "markdown",
