--- a/Jupyter/2019.2.Prova_AV2_Gestão_do_Conhecimento.ipynb
+++ b/Jupyter/2019.2.Prova_AV2_Gestão_do_Conhecimento.ipynb
@@ -10,7 +10,7 @@
     "DISCIPLINA: Gestão do Conhecimento\t PROFESSOR(A): Alex Salgado\n",
     "PERÍODO: 7o. TURNO: noite AVALIAÇÃO:\n",
     "\n",
-    "ALUNO(A): _\n",
+    "ALUNO(A): Juliana Freitas Cerqueira do Santos\n",
     "\n",
     "GRAU: VISTO DO PROFESSOR:\n"
    ]
